syntax = "proto3";

package pbU;

option go_package = "./";

service UserService{
    rpc UserSignup(SignupRequest)returns(Response);
    rpc UserLogin(LoginRequest)returns(Response);

}

message SignupRequest{
    string username = 1;
    string email = 2;
    string password = 3;
}

message LoginRequest{
    string email =1;
    string password = 2;
    string role = 3;
}

message Response {
    string status = 1;
    string error = 2;
    string message = 3;
}